--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_native_splash: ^2.4.1
+
+flutter_native_splash:
+  background_image: assets/images/img.png # Path gambar splash screen
+  android: true
+  ios: true
+  web: false              # Matikan splash untuk web jika tidak digunakan
+  fullscreen: true        # Mode layar penuh untuk splash screen
+  android_gravity: center # Posisi gambar pada layar di Android
+  ios_content_mode: scaleAspectFit # Posisi gambar pada layar di iOS
+
+
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +69,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/img.png
+    - assets/images/img_monas.png
+    - assets/images/img_id.png
+    - assets/images/img_en.png
+    - assets/images/img_help.png
+    - assets/images/img_jakcard.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
