--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.1
+  smooth_page_indicator: ^1.2.0+3
 
 flutter_native_splash:
   background_image: assets/images/img.png # Path gambar splash screen
@@ -76,6 +77,9 @@ flutter:
     - assets/images/img_en.png
     - assets/images/img_help.png
     - assets/images/img_jakcard.png
+    - assets/images/img_banner.png
+    - assets/images/img_map.png
+    - assets/images/img_jakone.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
