--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,11 @@ flutter:
     - assets/images/img_banner.png
     - assets/images/img_map.png
     - assets/images/img_jakone.png
+    - assets/images/img_calendar.png
+    - assets/images/img_clip_events.png
+    - assets/images/img_clip_jakarta.png
+    - assets/images/img_background_banner.png
+    - assets/images/img_banner_events.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
