--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.2.0+3
+  animated_bottom_navigation_bar: ^1.3.3
 
 flutter_native_splash:
   background_image: assets/images/img.png # Path gambar splash screen
@@ -85,6 +86,7 @@ flutter:
     - assets/images/img_clip_jakarta.png
     - assets/images/img_background_banner.png
     - assets/images/img_banner_events.png
+    - assets/images/img_qris.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
