--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   smooth_page_indicator: ^1.2.0+3
   animated_bottom_navigation_bar: ^1.3.3
+  get: ^4.6.6
 
 flutter_native_splash:
   background_image: assets/images/img.png # Path gambar splash screen
