--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,24 +73,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/img.png
-    - assets/images/img_monas.png
-    - assets/images/img_id.png
-    - assets/images/img_en.png
-    - assets/images/img_help.png
-    - assets/images/img_jakcard.png
-    - assets/images/img_banner.png
-    - assets/images/img_map.png
-    - assets/images/img_jakone.png
-    - assets/images/img_calendar.png
-    - assets/images/img_clip_events.png
-    - assets/images/img_clip_jakarta.png
-    - assets/images/img_background_banner.png
-    - assets/images/img_banner_events.png
-    - assets/images/img_qris.png
-    - assets/images/img_menu_maps.png
-    - assets/images/img_menu_balance.png
-    - assets/images/img_menu_event.png
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
